@@ -1,6 +1,6 @@
 #! @SHELL@
 #
-# Copyright 2013 Double Precision, Inc.  See COPYING for
+# Copyright 2013-2014 Double Precision, Inc.  See COPYING for
 # distribution information.
 #
 # Run this script monthly to generate DH parameters.
@@ -25,7 +25,7 @@ if test "@ssllib@" = "openssl"
 then
     if test "$BITS" = ""
     then
-	BITS=768
+	BITS=2048
     fi
 
     dd if=@RANDOMV@ of=@certsdir@/dhparams.rand.tmp count=1 2>/dev/null
