@@ -1,3 +1,13 @@
+2014-09-19  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* imap: try to print a message on stderr if the alarm() call, that
+	detects FAM library breakage, goes off.
+
+	* mkdhparams: default to 2048 DH params for OpenSSL.
+
+	* courier-imap.service: bump up startup timeout, initial service start
+	may take several minutes to generate DH parameters for the first
+	time.
 4.15.1
 
 2014-09-01  Sam Varshavchik  <mrsam@courier-mta.com>
